# GCM

./: .gitignore  README.md
GCM/GCMV0/GCMPrototipo/: GCMProto.SchDoc  GCMPrototipo.PrjPcb  GCMPrototipo.PrjPcbStructure  PCB1.PcbDoc
GCM/GCMV0/GCMPrototipo/GCMPrototipo1/: GCMPrototipo.PcbLib  GCMPrototipo.SCHLIB
GCM/GCMV0/GCMPrototipo/__Previews/: GCMProto.SchDocPreview
GCM/GCMV0/GCMPrototipoCodigo/main/: FSM.hpp  FSM.ino  ToF_Setup.hpp  ToF_Setup.ino  algorithmicResolution.hpp  algorithmicResolution.ino  main.hpp  main.ino  maze.hpp  maze.ino  movement.hpp  movement.ino
GCM/GCMV0/GCMPrototipoCodigo/tests/IR_test/: IR_test.ino
GCM/GCMV0/GCMPrototipoCodigo/tests/TB6612FNGTest/: TB6612FNGTest.ino
GCM/GCMV0/GCMPrototipoCodigo/tests/Test_2_sensors/: Test_2_sensors.ino
GCM/GCMV0/GCMPrototipoCodigo/tests/Test_6_sensors/: Test_6_sensors.ino
GCM/GCMV0/GCMPrototipoCodigo/tests/blinkTest/: sdkconfig
GCM/GCMV0/GCMPrototipoCodigo/tests/blinkTest/main/: CMakeLists.txt
GCM/GCMV0/GCMPrototipoCodigo/tests/blinkTestCore/: blinkTestCore.ino
GCM/GCMV1/GCMCodigo/GDWVersiones/LNR/: GDWLNRBeta1.cpp
GCM/GCMV1/GCMCodigo/GDWVersiones/Micromouse/: GDWBeta2.cpp  GDWBeta4.3.cpp
GCM/GCMV1/GCMCodigo/gdw_design_lab/: CMakeLists.txt
GCM/GCMV1/GCMCodigo/gdw_design_lab/results/: best_design.spec.txt  convergence.csv  hall_of_fame.csv
GCM/GCMV1/GCMCodigo/gdw_design_lab/src/: export.hpp  genetic.hpp  main_headless.cpp  robot_design.hpp
GCM/GCMV1/GCMPlaca/: GCMPlaca.PrjPcbStructure  GCM_PCB.PcbDoc  GCM_SCH.SchDoc
GCM/GCMV1/GCMPlaca/GCMLibrerias/: GCMLibreriasSCH.SCHLIB
GCM/GCMV1/GCMPlaca/__Previews/: GCM_SCH.SchDocPreview
Laberinto2026-main/: .gitignore
Laberinto2026-main/Placas/Prototipo/GCMPrototipoCodigo/tests/IR_test/: IR_test.ino
Laberinto2026-main/Placas/Prototipo/GCMPrototipoCodigo/tests/blinkTest/main/: blinkTest.cpp
Placas/GCM/: GDWBeta4.1.cpp  GDWBeta4.cpp
Placas/GCM/GCMCodigo/gdw_design_lab/src/: maze_gen.hpp
Placas/GCM/GCMPlaca/: GCMPlaca.PrjPcb  GCM_PCB.PcbDoc  GCM_SCH.SchDoc
Placas/GCM/GCMPlaca/GCMLibrerias/: GCMLibreriasSCH.SCHLIB
Placas/GCM/GCMPlaca/GCMPrototipo1/: GCMLibreriasSCH.SCHLIB
Placas/GCM/GCMPlaca/__Previews/: GCM_SCH.SchDocPreview
Placas/GCM/GCMSimulador/: CMakeLists.txt  Types.h
Placas/GCM/GCMSimulador/src/core/: GDWAlgorithm.h  MazeEngine.cpp  MazeEngine.h  PhysicsEngine.cpp  PhysicsEngine.h  RobotDesign.cpp  RobotDesign.h  TrajectoryGen.cpp  TrajectoryGen.h
Placas/GCM/GCMV1/GCMCodigo/GDWVersiones/Micromouse/: GDWBeta.cpp  GDWBeta3.cpp  GDWBeta4.1.cpp
Placas/GCM/GCMV1/GCMCodigo/gdw_design_lab/src/: gdw_core.hpp  gui_main.cpp
Placas/GCM/GCMV1/GCMPlaca/: GCMPlaca.PrjPcb  GCM_PCB.PcbDoc  GCM_SCH.SchDoc
Placas/GCM/GCMV1/GCMPlaca/GCMLibrerias/: GCMLibreriasSCH.SCHLIB
Placas/GCM/GCMV1/GCMPlaca/__Previews/: GCM_SCH.SchDocPreview
Placas/GCM/GDWVersiones/: GDWBeta2.1.cpp  GDWBeta4.1.cpp  GDWBeta4.2.cpp
Placas/GCM/gdw_design_lab/: README.md  gdw_design_lab
Placas/GCM/gdw_design_lab/results/: best_design.cad.txt  best_design.json
Placas/GCM/gdw_design_lab/src/: evaluator.hpp
Placas/Prototipo/GCMPrototipo/: GCMProto.SchDoc  GCMProtoPCB.PcbDoc  GCMPrototipo.PrjPcb
Placas/Prototipo/GCMPrototipo/GCMPrototipo1/: GCMPrototipo.LibPkg  GCMPrototipo.PcbLib  GCMPrototipo.SCHLIB
Placas/Prototipo/GCMPrototipo/__Previews/: GCMProto.SchDocPreview
Placas/Prototipo/GCMPrototipoCodigo/tests/TB6612FNGTest/: TB6612FNGTest.ino
Placas/Prototipo/GCMPrototipoCodigo/tests/TestCompletoSimple/: TestCompletoSimple.ino
Placas/Prototipo/GCMPrototipoCodigo/tests/Test_2_sensors/: Test_2_sensors.ino
Placas/Prototipo/GCMPrototipoCodigo/tests/blinkTest/: CMakeLists.txt  sdkconfig.old
Placas/Prototipo/GCMPrototipoCodigo/tests/blinkTestCore/: blinkTestCore.ino
Placas/Prototipo/GCMPrototipoCodigo/tests/blinkTestCore/blinkTestCore/: blinkTestCore.ino
